[package]
name = "RustyUsn"
version = "1.0.0"
authors = ["Matthew Seyer <https://github.com/forensicmatt/RustyUsn>"]
edition = "2018"

[dependencies]
clap = "*"
log = "0.4"
fern = "0.5"
chrono = "0.4"
regex = "1"
bitflags = "1.0"
encoding = "0.2"
serde = "1.0"
serde_json = "1.0"
byteorder = "1.3.1"
winstructs = {git = "https://github.com/omerbenamram/winstructs.git", branch = "master"}

[[bin]]
name = "rusty_usn"