[package]
name = "rusty_usn"
description = "A fast and cross platform USN Parser written in Rust that outputs to JSONL"
version = "1.5.1"
authors = ["Matthew Seyer"]
edition = "2018"
homepage = "https://github.com/forensicmatt/RustyUsn"
repository = "https://github.com/forensicmatt/RustyUsn"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = "2"
log = "0.4"
hex = "0.3"
fern = "0.5"
time = "0.1"
chrono = "0.4"
regex = "1"
lazy_static = "1.3.0"
bitflags = "1.0"
encoding = "0.2"
serde = "1.0"
serde_json = "1.0"
byteorder = "1.3.1"
winstructs = "0.3.0"
lru = "0.1.17"
rayon = {version = "1.0.3", optional = true}

[dependencies.mft]
version = "0.5"

[dependencies.winapi]
version = "0.3"
features = [
"winioctl",
"ioapiset"
]
optional = true

[features]
default = ["multithreading"]
multithreading = ["rayon"]
windows = ["winapi"]

[[bin]]
name = "rusty_usn"

[[bin]]
name = "listen_usn"
required-features = ["windows"]

[[example]]
name = "print_live_folder_mapping"
required-features = ["windows"]